Working on aniamtion menu

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -287,5 +287,8 @@
         "SetConvarServerInfo",
         "SetConvarReplicated",
         "GetNumPlayerIndices"
+    ],
+    "Lua.diagnostics.disable": [
+        "undefined-global"
     ]
 }
